CMAKE_MINIMUM_REQUIRED (VERSION 3.4)

PROJECT (Test VERSION 0.0.0)

SET(BUILD_TESTING flase)

#读取Src目录
AUX_SOURCE_DIRECTORY(Src DIR_SRCS)

#指定头文件路径
include_directories(${PROJECT_SOURCE_DIR}/Include ${ROOT}/Engine/Include ${ROOT}/Engine/Include/Tools)

#输出文件
ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})

#输入路径
SET(EXECUTABLE_OUTPUT_PATH ${ROOT}/build/bin)

#链接库
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Engine)

#拷贝资源
FILE(COPY ${PROJECT_SOURCE_DIR}/Shader DESTINATION ${ROOT}/build/bin)

#设置编译选项
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
